<resources>
    <string name="app_name">Unknown Canny </string>
    <string name="colour">colour</string>
    <string name="gray">gray</string>
    <string name="edge">edge</string>
    <string name="start_demo">Start Demo</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="this_application_is_my_submission_for_30_days_of_kotlin_n_this_is_a_demo_of_image_proccessing_in_android_using_kotlin">This Application is my Submission for 30 Days of Kotlin \n \nThis is a Demo of Image proccessing in Android using Kotlin \n \nMade with Love by Shantam Sultania</string>
    <string name="check_out_more_of_my_kotlin_and_opencv_projects">Click ME to check out more of my Kotlin and OpenCV Projects</string>
</resources>
