<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".des_activity">

    <Button
        android:id="@+id/start_btn"
        android:layout_width="175dp"
        android:layout_height="61dp"
        android:text="@string/start_demo"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/des"
        app:layout_constraintVertical_bias="0.881" />

    <ImageView
        android:id="@+id/imageView_love_kotlin"
        android:layout_width="415dp"
        android:layout_height="225dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/lovekotlin" />

    <TextView
        android:id="@+id/des"
        android:layout_width="372dp"
        android:layout_height="128dp"
        android:gravity="center"
        android:text="@string/this_application_is_my_submission_for_30_days_of_kotlin_n_this_is_a_demo_of_image_proccessing_in_android_using_kotlin"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_love_kotlin"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/know_btn"
        android:layout_width="361dp"
        android:layout_height="63dp"
        android:gravity="center"
        android:text="@string/check_out_more_of_my_kotlin_and_opencv_projects"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/des"
        app:layout_constraintVertical_bias="0.345" />

</androidx.constraintlayout.widget.ConstraintLayout>